# internal/app/product/handlers/product.go
@@ -19,7 +19,7 @@ func NewProductHandler(productService service.ProductService) *ProductHandler {
 	}
 }
 
-// CreateNewProduct creates a new service.product.
+// CreateNewProduct creates a new product.
 // @Summary Create a new product
 // @Description Create a new product with the provided request data
 // @Tags Product
@@ -70,9 +70,21 @@ func (h *ProductHandler) CreateNewProduct(ctx *fiber.Ctx) error {
 	})
 }
 
+// UpdateExistingProduct updates existing product.
+// @Summary Update existing product
+// @Description Update existing product with the provided request data
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Param request body models.UpdateProductRequestDTO true "Request body containing product details"
+// @Success 200 {object} utils.Response
+// @Failure 400 {object} utils.ErrorResponse
+// @Failure 500 {object} utils.ErrorResponse
+// @Security ApiKeyAuth
+// @Router /api/v1/product [put]
 func (h *ProductHandler) UpdateExistingProduct(c *fiber.Ctx) error {
 	// request new data from http
-	request := new(models.UpdateProductResponseDTO)
+	request := new(models.UpdateProductRequestDTO)
 	if err := c.BodyParser(request); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(utils.ErrorResponse{
 			Code:   fiber.StatusBadRequest,
@@ -109,6 +121,21 @@ func (h *ProductHandler) UpdateExistingProduct(c *fiber.Ctx) error {
 	})
 }
 
+// GetPaginationProduct get pagination all products.
+// @Summary Get Pagination Product
+// @Description Get All Paginated products with the provided request data
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Param page_index query int false "Page index" default(1)
+// @Param page_size query int false "Page size" default(10)
+// @Param search query string false "Global search term"
+// @Param sort_by query string false "Sort by field"
+// @Success 200 {object} utils.Response
+// @Failure 400 {object} utils.ErrorResponse
+// @Failure 500 {object} utils.ErrorResponse
+// @Security ApiKeyAuth
+// @Router /api/v1/product [get]
 func (h *ProductHandler) GetPaginationProduct(ctx *fiber.Ctx) error {
 	// Parse and validate the request query parameters
 	pageIndex := ctx.Query("page_index")
@@ -163,6 +190,18 @@ func (h *ProductHandler) GetPaginationProduct(ctx *fiber.Ctx) error {
 
 }
 
+// GetProductByID get a product by ID.
+// @Summary Get Product by ID
+// @Description Get a product by the provided ID
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Param id path string true "Product ID"
+// @Success 200 {object} utils.Response
+// @Failure 400 {object} utils.ErrorResponse
+// @Failure 404 {object} utils.ErrorResponse
+// @Security ApiKeyAuth
+// @Router /api/v1/product/{id} [get]
 func (h *ProductHandler) GetProductByID(ctx *fiber.Ctx) error {
 	// Get the service.product ID from the request parameters
 	id := ctx.Params("id")
@@ -192,7 +231,19 @@ func (h *ProductHandler) GetProductByID(ctx *fiber.Ctx) error {
 	})
 }
 
-func (h *ProductHandler) DeleteExistingProduct(ctx *fiber.Ctx) error {
+// DeleteProductByID delete a product by ID.
+// @Summary Delete Product by ID
+// @Description Delete a product by the provided ID
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Param id path string true "Product ID"
+// @Success 200 {object} utils.Response
+// @Failure 400 {object} utils.ErrorResponse
+// @Failure 404 {object} utils.ErrorResponse
+// @Security ApiKeyAuth
+// @Router /api/v1/product/{id} [delete]
+func (h *ProductHandler) DeleteProductByID(ctx *fiber.Ctx) error {
 	// Get the service.product ID from the request parameters
 	id := ctx.Params("id")
 
